--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -516,7 +516,7 @@ a.title, #title {
 
 input {
     margin: 5px !important;
-    /*border-radius: 7px !important; */
+    border-radius: 7px !important; 
 }
 
 ::-webkit-scrollbar {
