--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -4,18 +4,22 @@ body {
     /* font-family: 'Lato', sans-serif !important; */
      /*font-size: 110% !important; */
     /* line-height: 200% !important; */
-     background: rgba(0,0,0,.8) !important; 
+     /*background: rgba(0,0,0,.8) !important; */
     /*scroll-behavior: smooth;*/
     /*margin-top: 5em;*/
     /*background: rgba(200,200,200,1) !important;*/
-    filter: invert(1) !important; 
+    /*filter: invert(1) !important; */
      /*overscroll-behavior: none; */
-    transition: all 1s ease !important;
+    transition: all .5s ease !important;
     /* background: #0e0e44 !important; */
+}
+.full {
+  max-width: inherit !important;
+  width: inherit !important;
 }
 
 .tone_item {
-    transition: all 1s ease !important;
+    transition: all .5s ease !important;
 }
 
 .displaynone {
@@ -173,7 +177,7 @@ html.ios body {
 
 
 .segment:not(.pushable) {
-  transition: height 1s linear;
+  transition: height .5s linear;
   /*border-radius: 10px !important;*/
 }
 
@@ -276,7 +280,7 @@ input
 }
 
 .ui.button.result {
-  transition: all 1s ease !important;
+  transition: all .5s ease !important;
   display: inline !important;
   /* padding: 5px !important; */
 }
@@ -289,7 +293,7 @@ input
 }
 
 .tone_item {
-    transition: all 1s ease !important;
+    transition: all .5s ease !important;
 }
 
 .ui.button.result:hover{
@@ -327,7 +331,7 @@ a.goto_article {
 .ui.button {
   margin: 2px !important;
   border-radius: 10px !important; 
-  transition: height 1s ease !important; 
+  transition: height .5s ease !important; 
   /* background-color: rgba(200, 200, 200, 0.2) !important; */
   /* padding: 12px !important; */
   font-family: 'Roboto', sans-serif !important; 
@@ -356,7 +360,7 @@ a.goto_article {
     transform: scale(1.1) !important;
 }
 .superzoom:hover {
-    transition: all 1s ease !important; 
+    transition: all .5s ease !important; 
     transform: scale(2) !important;
     z-index:1000 !important;
 }
@@ -383,7 +387,7 @@ a.title, #title {
 }
 
 .invert{
-  filter: invert(1) !important; 
+  /*filter: invert(1) !important; */
 }
 .left.floated{
     margin:3px !important;
@@ -605,17 +609,17 @@ input {
 
 
 .button, .selector, .card, .dark_mode, .ui.header, .ui.label, p, img{
-    animation: fadein 1s !important;
-    /*-webkit-transition: opacity 1s ease-in !important;*/
-    /* -webkit-transition: opacity 1s ease-out; */
+    animation: fadein .5s !important;
+    /*-webkit-transition: opacity .5s ease-in !important;*/
+    /* -webkit-transition: opacity .5s ease-out; */
      animation: fadeout .25s; 
 }
 
 
 .icon:not(.loading){
-    animation: fadein 1s !important;
-    transition: all 1s ease !important;
-    /* -webkit-transition: opacity 1s ease-out; */
+    animation: fadein .5s !important;
+    transition: all .5s ease !important;
+    /* -webkit-transition: opacity .5s ease-out; */
     animation: fadeout .25s; 
 }
 
@@ -635,13 +639,13 @@ input {
 }
 
 .ui.header{
-    transition: all 1s ease !important;
+    transition: all .5s ease !important;
     /* text-transform: capitalize !important; */
     /* font-family: 'Raleway', sans-serif !important; */
     /* font-family: 'Montserrat', sans-serif !important; */
     /*font-family: 'Roboto', sans-serif !important; */
     /* font-family: 'Lato+Mono', sans-serif !important; */
-    /*font-family: 'Ubuntu', sans-serif !important;*/
+    font-family: 'Ubuntu', sans-serif !important;
 }
 
 @keyframes fadein {
