separate reddit template, wiki init, compact segments in results pane, nav back

--- a/parts/client/blocks.jade
+++ b/parts/client/blocks.jade
@@ -99,8 +99,8 @@ template(name='skve')
     // a.ui.image.big.link.label.set_session_v(class=calculated_class)
     .ui.zoomer.compact.button.set_session_v(class=calculated_class title=t)
         if i
-            // i.icon(class=icon)
-            +i n=i cl='ui mini inline image'
+            i.icon(class=icon)
+            // +i n=i cl='ui mini inline image'
         unless ionly
             if l
                 |#{l}
