--- a/parts/client/login.jade
+++ b/parts/client/login.jade
@@ -14,28 +14,28 @@ template(name='login')
                 //     h4.ui.center.aligned.header #{message}
                 .ui.inline.small.header 
                     |username
-                .ui.fluid.large.icon.input(class=login_class title='username')
+                .ui.fluid.large.icon.input(class=enter_class title='username')
                     i.user.outline.icon
                     input.username(type='text')
                 .spacer
                 .ui.inline.small.header 
                     | password
-                .ui.fluid.large.icon.input(class=login_class title='password')
+                .ui.fluid.large.icon.input(class=enter_class title='password')
                     i.lock.icon
                     input.password(type='password')
                 //- if username
                 // if logging_in
                 .spacer
-                .ui.fluid.big.button.enter(title="login #{username}" class=enter_class)
+                .ui.fluid.big.basic.button.enter(title="login #{username}" class=enter_class)
                     |login
                     strong #{username}
                     |&nbsp;
                     i.sign.in.alternate.icon
                 .ui.center.aligned.basic.segment    
-                    a.ui.button(href='/forgot_password')
+                    a.ui.basic.button(href='/forgot_password')
                         i.refresh.icon
                         |forgot password
-                    a.ui.button(href='/register')
+                    a.ui.basic.button(href='/register')
                         i.plus.icon
                         |register
 
