--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -334,7 +334,7 @@ a.goto_article {
   transition: height .5s ease !important; 
   /* background-color: rgba(200, 200, 200, 0.2) !important; */
   /* padding: 12px !important; */
-  font-family: 'Roboto', sans-serif !important; 
+  /*font-family: 'Roboto', sans-serif !important; */
   
   /* font-weight: lighter !important; */
   /* font-size: 120% !important; */
@@ -351,7 +351,7 @@ a.goto_article {
     z-index: 1000 !important;
     /*text-shadow: 0 20px 20px 20px rgba(50, 50, 100, 0.1) !important; */
     /*text-shadow: 0 0 3px grey !important;*/
-    filter: drop-shadow(0px 0px 5px grey);    
+    filter: drop-shadow(0px 0px 5px white);    
 }
 
 .zoomer:hover {
